fixed gap in recommendations section

--- a/src/components/banking/Banking.module.css
+++ b/src/components/banking/Banking.module.css
@@ -14,13 +14,13 @@
     margin-bottom: 16px;
 }
 
-.value {
-    font-size: 78px;
-    padding-left: 16px;
-    padding-right: 16px;
-    margin-top: 2px;
-    font-family: 'Courier New', Courier, monospace;
-}
+/*.value {*/
+/*    font-size: 78px;*/
+/*    padding-left: 16px;*/
+/*    padding-right: 16px;*/
+/*    margin-top: 2px;*/
+/*    font-family: 'Courier New', Courier, monospace;*/
+/*}*/
 
 .button {
     appearance: none;
